--- a/sdk-bsp-stm32f469nih6u-stmicroelectronics-stm32f469-st-disco.yaml
+++ b/sdk-bsp-stm32f469nih6u-stmicroelectronics-stm32f469-st-disco.yaml
@@ -74,6 +74,9 @@ template_projects:
     - figures
     - Kconfig
     - libraries
+    - README.md
+    - rtconfig.h
+    - rtconfig.py
     - makefile.targets
     - project.ewd
     - project.ewp
