--- a/project_0/.settings/projcfg.ini
+++ b/project_0/.settings/projcfg.ini
@@ -1,7 +1,7 @@
 #RT-Thread Studio Project Configuration
 #Sat Jan 16 15:18:32 CST 2021
 project_type=rtt
-chip_name=STM32F407ZG
+chip_name=STM32F469NI
 cpu_name=None
 target_freq=
 clock_source=
