--- a/sdk-bsp-stm32f469nih6u-stmicroelectronics-stm32f469-st-disco.yaml
+++ b/sdk-bsp-stm32f469nih6u-stmicroelectronics-stm32f469-st-disco.yaml
@@ -115,4 +115,59 @@ template_projects:
   project_description: ''
   project_name: STM32F469-ST-DISCO
   project_type: rt-thread|@full|@latest
+- builtin_files:
+  - files_and_folders:
+    - .config
+    - .cproject
+    - .gitignore
+    - .project
+    - .settings
+    - applications
+    - board
+    - cconfig.h
+    - figures
+    - Kconfig
+    - libraries
+    - README.md
+    - rtconfig.h
+    - rtconfig.py
+    - makefile.targets
+    - project.ewd
+    - project.ewp
+    - project.eww
+    - project.uvopt
+    - project.uvoptx
+    - project.uvproj
+    - project.uvprojx
+    - rtconfig_preinc.h
+    - SConscript
+    - SConstruct
+    - template.ewp
+    - template.eww
+    - template.uvopt
+    - template.uvoptx
+    - template.uvproj
+    - template.uvprojx
+    source_path_offset: project_0
+    target_path_offset: ''
+  external_files:
+  - files_and_folders:
+    - components
+    - include
+    - libcpu/arm
+    - libcpu/Kconfig
+    - libcpu/SConscript
+    - src
+    - tools
+    - Kconfig
+    - LICENSE
+    package_name: RT-Thread
+    package_type: RT-Thread_Source_Code
+    package_vendor: ''
+    package_version: 4.0.5
+    source_path_offset: ''
+    target_path_offset: rt-thread
+  project_description: ''
+  project_name: STM32F469-ST-DISCO
+  project_type: rt-thread|@full|@4.0.5  
 yaml_version: 3
